Avanço no curso de ES6 (RS)

--- a/CursoJS/RocketSeat/CursoES6/.babelrc
+++ b/CursoJS/RocketSeat/CursoES6/.babelrc
@@ -1,5 +1,6 @@
 // Transforma o código para versões em que todos os browsers entendam.
 
 {
-    "presets": ["@babel/preset-env"] // Entende que está trabalhando no navegador.
+    "presets": ["@babel/preset-env"], // Entende que está trabalhando no navegador.
+    "plugins": ["@babel/plugin-proposal-object-rest-spread"]
 }
