--- a/CursoJS/RocketSeat/CursoES6/.babelrc
+++ b/CursoJS/RocketSeat/CursoES6/.babelrc
@@ -2,5 +2,8 @@
 
 {
     "presets": ["@babel/preset-env"], // Entende que está trabalhando no navegador.
-    "plugins": ["@babel/plugin-proposal-object-rest-spread"]
+    "plugins": [
+        "@babel/plugin-proposal-object-rest-spread",
+        "@babel/plugin-transform-async-to-generator"
+    ]
 }
