--- a/CursoJS/RocketSeat/CursoES6/package.json
+++ b/CursoJS/RocketSeat/CursoES6/package.json
@@ -7,6 +7,8 @@
     "@babel/cli": "^7.6.0",
     "@babel/core": "^7.6.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
+    "@babel/plugin-transform-async-to-generator": "^7.5.0",
+    "@babel/polyfill": "^7.6.0",
     "@babel/preset-env": "^7.6.0",
     "babel-loader": "8.0.0-beta.0",
     "webpack": "^4.40.2",
@@ -15,5 +17,8 @@
   },
   "scripts": {
     "dev": "webpack-dev-server --mode=development"
+  },
+  "dependencies": {
+    "axios": "^0.19.0"
   }
 }
