--- a/Projetos/DevRadar/mobile/package.json
+++ b/Projetos/DevRadar/mobile/package.json
@@ -2,6 +2,7 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
+    "start2": "expo start --tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -9,7 +10,9 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.6",
+    "axios": "^0.19.2",
     "expo": "~36.0.0",
+    "expo-location": "^8.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
@@ -17,6 +20,7 @@
     "react-native-maps": "0.26.1",
     "react-native-safe-area-context": "^0.6.2",
     "react-native-web": "~0.11.7",
+    "react-native-webview": "7.4.3",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^2.0.15"
   },
