--- a/Projetos/DevRadar/mobile/package.json
+++ b/Projetos/DevRadar/mobile/package.json
@@ -6,7 +6,14 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "lint": "yarn eslint \"./src/**/*.js\""
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "concurrently -r \"yarn lint\" \"yarn jsc --noEmit\"",
+      "post-merge": "yarn"
+    }
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.6",
@@ -26,7 +33,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "babel-preset-expo": "~8.0.0"
+    "babel-preset-expo": "~8.0.0",
+    "husky": "^4.2.1"
   },
   "private": true
 }
